--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@idletoaster/ssh-mcp-server",
-  "version": "2.0.4",
-  "description": "SSH MCP Server - Connect to remote servers via SSH and execute commands through Model Context Protocol (Node.js implementation)",
+  "version": "2.1.0",
+  "description": "SSH MCP Server v2.1.0 - Enhanced with token-efficient file operations for remote development",
   "main": "index.js",
   "type": "module",
   "bin": {
